blocksford street photographer all

--- a/Berners Street .html
+++ b/Berners Street .html
@@ -875,7 +875,7 @@ You immediately turn around. Something’s not right. Not at all.
 
 &#39;&#39;Lance McFlare&#39;&#39; //&quot;So, how will ye get it, mate?&quot;//
 
-&#39;&#39;Other Gentleman&#39;&#39; //&quot;Well, you know.. I know a man who knows a man who lives in Leipzig. He knows someone whose brother-in-law works for the company and they have already distributed some test models to professional photographers around Leipzig. In a couple of months they will bring them to the german stores and according to my calculations they will export it in about half a year. So.. At the release date in germany, the professional photographers who testet the cameras, can buy them or give them back. And this is the point where the brother-in-law of the man who knows the man in Leipzig who knows my man comes in; If some of the photographers give their cameras back, he can buy one of them and send it to me. Of course all of the gentlemen want a piece of the cake, but i promise you, it will be worth it!&quot;//
+&#39;&#39;Other Gentleman&#39;&#39; //&quot;Well, you know.. I know a man who knows a man who lives in Leipzig. He knows someone whose brother-in-law works for the company and they have already distributed some test models to professional photographers around Leipzig. In a couple of months they will bring them to the german stores and according to my calculations they will export it in about half a year. So.. At the release date in germany, the professional photographers who tested the cameras, can buy them or give them back. And this is the point where the brother-in-law of the man who knows the man in Leipzig who knows my man comes in; If some of the photographers give their cameras back, he can buy one of them and send it to me. Of course all of the gentlemen want a piece of the cake, but i promise you, it will be worth it!&quot;//
 
 &#39;&#39;Lance McFlare&#39;&#39; //&quot;Hmmm.. I’ll pay more to get a new model a little bit sooner than the other photographers in the city? That’s normally not my kind of business.&quot;//
 
@@ -905,7 +905,7 @@ You take a closer look at a sporadic prototype of a camera that basically looks 
 
 [[Sure, excuse me, it’s fascinating!-&gt;Nosy]]
 [[What’s the use of this?-&gt;What&#39;s This?]]
-[[Oh, i just wanted to look around a little bit. Anyway, i got to go. See you!-&gt;Blocksford Street]]</tw-passagedata><tw-passagedata pid="40" name="I need a photographer" tags="" position="2043,441" size="100,100">&#39;&#39;Lance McFlare&#39;&#39; //&quot;Aye, right place, right time! Although my timetable is quite full, i do have some time left for new commissions! What exactly are we talking about?&quot;//
+[[Oh, i just wanted to look around a little bit. Anyway, i got to go. See you!-&gt;Blocksford Street]]</tw-passagedata><tw-passagedata pid="40" name="I need a photographer" tags="" position="2044.6666666666667,447.6666666666667" size="100,100">&#39;&#39;Lance McFlare&#39;&#39; //&quot;Aye, right place, right time! Although my timetable is quite full, i do have some time left for new commissions! What exactly are we talking about?&quot;//
 
 [[My employer Mrs. Tottenham wants a professional family portrait for the album.-&gt;Album]]
 
@@ -1539,7 +1539,7 @@ In the big stir you created you leap out of eyes reach of the flock and move you
 &lt;&lt;/if&gt;&gt;
 &lt;&lt;/linkappend&gt;&gt;
 
-</tw-passagedata><tw-passagedata pid="97" name="Album" tags="" position="1651,555" size="100,100">&#39;&#39;Lance McFlare&#39;&#39; //&quot;Braw! I have a lot of experience in family portrait. How big is the family?&quot;//
+</tw-passagedata><tw-passagedata pid="97" name="Album" tags="" position="1651,555" size="100,100">&#39;&#39;Lance McFlare&#39;&#39; //&quot;Braw! I have a lot of experience in family portraits. How many people are in the family?&quot;//
 
 //Around 30 people. We also need a portrait of every single one.//
 
@@ -1558,13 +1558,14 @@ In the big stir you created you leap out of eyes reach of the flock and move you
 [[ Too bad, see you!-&gt;Blocksford Street]]
 </tw-passagedata><tw-passagedata pid="99" name="Barter Phographer" tags="" position="1446,777" size="100,100">&#39;&#39;Lance McFlare&#39;&#39; //&quot;Who is the Lady again?&quot;//
 
-&lt;&lt;linkappend &quot;Her late husband was a key man in the travelling business of london decades ago. She is still kindly regarded by a lot of travel agencies and publishers.&quot;&gt;&gt;
+&lt;&lt;linkappend &quot;Her late husband was an important key figure in the travelling business of london decades ago. She is still kindly regarded by a lot of travel agencies and publishers.&quot;&gt;&gt;
 
 &#39;&#39;Lance McFlare&#39;&#39; //&quot;What kind of publishers?&quot;//
 
-&lt;&lt;linkappend &quot;Look, i’m not very well informed in this field. She always writes Letters to the editors of something called “vist” magazine…&quot;&gt;&gt;
+&lt;&lt;linkappend &quot;Look, i’m not very well informed in this field. She always writes Letters to the editors of something called “visit” magazine or something alike…&quot;&gt;&gt;
 
 &#39;&#39;Lance McFlare&#39;&#39; //&quot;The Visitors of London?! Good god! It would be amazing to meet somebody with contacts to the editors of that magazine! Is it possible to visit the Lady? I will bring my stuff! Maybe she will have a lil’ extra time to talk! Alright, I&#39;ll do it for 10£ upfront.&quot;//
+
 &lt;&lt;set $photographer_pricecheap to true&gt;&gt;
 &lt;&lt;if $money gt 10&gt;&gt;
 [[Alright. This Monday at 8 o&#39;clock ? The address is 54 Berners Street.-&gt;Deal Photographer]]
@@ -1592,7 +1593,7 @@ He stands up, whispers something to the other man and walks towards you.
 &#39;&#39;Lance&#39;&#39; //&quot;How can i help you, Sir?&quot;//
 
 [[My employer Mrs. Tottenham wants a professional family portrait for the album.-&gt;Album]]
-[[My employer Mrs. Tottenham wants a portrait of her dog. The old Labrador is slowly dying and needs to be caught in a wonderful picture for the next generations.-&gt;Dog]]</tw-passagedata><tw-passagedata pid="103" name="What&#39;s This?" tags="" position="2250,34" size="100,100">&#39;&#39;Lance McFlare&#39;&#39; //&quot;Oh, the camera is a very complicated and complex manufacturing. I don’t want to be rude, but most people wouldn’t understand it anyway.&quot;//
+[[My employer Mrs. Tottenham wants a portrait of her dog. The old Labrador is slowly dying and needs to be caught in a wonderful picture for the next generations.-&gt;Dog]]</tw-passagedata><tw-passagedata pid="103" name="What&#39;s This?" tags="" position="2250,34" size="100,100">&#39;&#39;Lance McFlare&#39;&#39; //&quot;Oh, the camera is of a very complicated and complex manufacture. I don’t want to be rude, but most people wouldn’t understand it anyway.&quot;//
 
 He stands up, whispers something to the other man and walks towards you.
 
