--- a/Berners Street .html
+++ b/Berners Street .html
@@ -483,12 +483,12 @@ He lights his pipe and continues the talk with the other gentleman, also a very 
 	Alright boy, get out of my house!&lt;br/&gt;
 	[[Leave the Shop-&gt;Blocksford Street]] 
 &lt;&lt;else&gt;&gt;
-Strolling down the Bloxfordstreet looking for number 211, you suddenly stand in front of a tiny entrance between a multilevel family house with a small tea store in its first floor on the left side and a former pet shop on the right, which seems to be abandoned since ages. 
+Strolling down the Bloxfordstreet, looking for house number 211, you suddenly stand in front of a tiny entrance between a multilevel family house with a small tea store in its first floor on the left side and a former pet shop on the right, which seems to be abandoned since ages. 
 Above the small door an old copper sign slightly covered in patina says:
 “COOPER NEEDLESTICH - ENGRAVER since 1858”
 You take a look through the little window beneath the small entrance but you can’t see anything because of the dust and dirt on the glass.
-You push the old yawing door carefully and enter the building.
-The room is such a mess, you haven’t seen anything like that before in your life. There is metal stuff everywhere; tons of copper plates are piled on top of each other, nearly reaching the ceiling. Hundreds of hammers, burins and other strange tools are lying around the room. There is a discreet smell of metal filling the air.
+You push the old, screeching door carefully and enter the building.
+The room you enter is an absolute mess, you haven’t seen anything like that before in your life. There is metal stuff everywhere; tons of copper plates are piled on top of each other, nearly reaching the ceiling. Hundreds of hammers, burins and other strange tools are lying around the room. There is the pungent smell of metal and flame hanging in the air.
 You take a step to the counter in the back section of the room when a fat cat suddenly jumps from a stack of metal plates, touches your pants while rushing to the door. She obviously sniffed the rare chance to leave the building since you opened the door.
 
 [[Hello?! Anybody home?]]
@@ -917,9 +917,9 @@ You take a closer look at a sporadic prototype of a camera that basically looks 
 &lt;&lt;/if&gt;&gt;
 &lt;&lt;set $photographer to true&gt;&gt;
 [[Blocksford Street]] </tw-passagedata><tw-passagedata pid="42" name="Hello?! Anybody home?" tags="" position="1759,1265" size="100,100">
-After a while, a small skinny man in old brown clothes enters the room from a back room behind the counter. He looks up to you, eyes you up and down, opens the microscope-kinda-lid of his horn glasses and clears his throat.
+After a while, a small skinny man in ragged brown clothing enters the room from a back room behind the counter. He looks up to you, eyeing you from top to bottom, opens the strange lids of his horn glasses, somewhat reminiscent of some kind of microscopes and clears his throat.
 
-I heard you, Sir, but i had to finish my work. You know, as an artist i need the flow. It’s hard to restart after getting disturbed.An artist like me needs to focus constantly to get the right result.
+//&quot;I heard you, Sir, but i had to finish my work. You know, as an artist i need the flow. It’s hard to restart after getting disturbed.An artist like me needs to focus constantly to get the right result.&quot;//
 
 [[Excuse me, i didn’t want to disturb your workflow, Sir.-&gt;Excuse]]
 
@@ -1434,12 +1434,12 @@ He walks away and disappears in the next alley.
   &lt;&lt;set $rugdealer_pricecheap to 2&gt;&gt;
 &lt;&lt;/link&gt;&gt;
 
-[[Still too much. I’m sorry! Have a nice day, Sir!-&gt;Blocksford Street]]</tw-passagedata><tw-passagedata pid="87" name="Excuse" tags="" position="1172,1417" size="100,100">&#39;&#39;Needlestich&#39;&#39; //&quot;Don’t you worry, Sir. As long as you respect my Artwork, i am always open for a talk, especially if you want me to do my artwork for you. Is that the reason of your visit? By the way, my name is Cooper Needlestich, i am the owner.&quot;//
+[[Still too much. I’m sorry! Have a nice day, Sir!-&gt;Blocksford Street]]</tw-passagedata><tw-passagedata pid="87" name="Excuse" tags="" position="1172,1417" size="100,100">&#39;&#39;Needlestich&#39;&#39; //&quot;Don’t you worry, Sir. As long as you respect my artworks, i am always open for a fine chat, especially if you want me to do my artwork for you. Is that the reason of your visit? By the way, my name is Cooper Needlestich, i am the owner.&quot;//
 
 [[ Sure.I was assigned by my employer Mrs. Tottenham to hire somebody to make a portrait of her dog, an old and prideful labrador. She fears that he will leave us soon and she wants to have a memory of him lying on her late husband&#39;s former armchair.-&gt;Dog Portrait]]
 
 [[Well, i just wanted to ask the way to the photographers store. It’s the same Street, isn’t it?-&gt;AngeredChalcographer]]
-</tw-passagedata><tw-passagedata pid="88" name="pets" tags="" position="1491,1754" size="100,100">&#39;&#39;Needlestich&#39;&#39; //&quot;hmmmpf… so do you?&quot;//
+</tw-passagedata><tw-passagedata pid="88" name="pets" tags="" position="1491,1754" size="100,100">&#39;&#39;Needlestich&#39;&#39; //&quot;Hmmmpf… so do you?&quot;//
 
 [[Well.. you know. they are alright..!-&gt;Excuse]]
 &lt;&lt;linkappend &quot;Just kidding, hate those ugly skunks!&quot;&gt;&gt;
@@ -1448,7 +1448,7 @@ He walks away and disappears in the next alley.
 	[[Leave the Shop-&gt;Blocksford Street]] 
 &lt;&lt;/linkappend&gt;&gt;</tw-passagedata><tw-passagedata pid="89" name="Dog Portrait" tags="" position="1087,1777" size="100,100">&#39;&#39;Needlestich&#39;&#39; //&quot;Oh, dogs are my speciality. What size are we talking about?&quot;//
 
-//Well, it should be a big portrait. I mean a giant one. I mean, it’s a memorial!//
+&quot;Well, it should be a big portrait. I mean a giant one. I mean, it’s a memorial!&quot;, you lie as good as you can. Which doesn&#39;t say much, sadly.
 
 &#39;&#39;Needlestich&#39;&#39; //&quot;Well, sounds like a lot of work. I normally do blanket prices for this kind of work. Let’s say &#39;&#39;20£&#39;&#39;.&quot;//
 
@@ -1607,17 +1607,17 @@ Listen, i’ll do it for 17£!&quot;//
 [[[Sounds good! Monday 8 o’clock? The address is 54 Berners Street.-&gt;Deal Chaclographer]]
 &lt;&lt;/if&gt;&gt;
 
-[[Still too much-&gt;Fail Barter Chalcographer]]</tw-passagedata><tw-passagedata pid="105" name="AngeredChalcographer" tags="" position="1270,1100" size="100,100">&lt;&lt;set $angered_calcographer to true&gt;&gt;
-&#39;&#39;Needlestich&#39;&#39; //&quot;You can’t be serious about that, Sir! Oh no.. a gentleman enters my shop, interrupts my artistic workflow and asks for the crappy photographer.. Oh god, how did i deserve this? Please get out, I have to hang myself.&quot;//
+[[Still too much-&gt;Fail Barter Chalcographer]]</tw-passagedata><tw-passagedata pid="105" name="AngeredChalcographer" tags="" position="1273.3333333333333,1101.6666666666667" size="100,100">&lt;&lt;set $angered_calcographer to true&gt;&gt;
+&#39;&#39;Needlestich&#39;&#39; //&quot;You can’t be serious about that, Sir! Oh no.. a gentleman enters my shop, interrupts my artistic workflow and asks for the crappy photographer.. Oh god, how did i deserve this? Please get out, I think I may have to hang myself.&quot;//
 
 [[Leave the Shop-&gt;Blocksford Street]] </tw-passagedata><tw-passagedata pid="106" name="Fail Barter Chalcographer" tags="" position="1764,2047" size="100,100">&lt;&lt;set $angered_calcographer to true&gt;&gt;
- &#39;&#39;Needlestich&#39;&#39; //&quot;You really think this is a discount, huh? I am an Artist! Well, go visit a crappy photographer!&quot;//
+ &#39;&#39;Needlestich&#39;&#39; //&quot;You really think this is a discount, huh? I am an Artist! Well, go visit your crappy photographer, then!&quot;//
 
-[[Leave the Shop-&gt;Blocksford Street]] </tw-passagedata><tw-passagedata pid="107" name="Artist?" tags="" position="1510,1409" size="100,100">This is outrageous! Do i look like a plumber?
+[[Leave the Shop-&gt;Blocksford Street]] </tw-passagedata><tw-passagedata pid="107" name="Artist?" tags="" position="1510,1409" size="100,100">//&quot;This is outrageous! Do i look like a plumber to you, brat?&quot;//
 
 [[Excuse me, Sir, i don’t mean to be rude. This place just doesn’t look like an artists atelier. And.. you just don’t really look like an artist at all..-&gt;Artist Excuse]]
 
-[[To be honest; What about a really dirty old plumber?-&gt;Anger Artist]]</tw-passagedata><tw-passagedata pid="108" name="Artist Excuse" tags="" position="1553,1205" size="100,100">&#39;&#39;Needlestich&#39;&#39; //&quot;Just because i do not paint, neigher look like a fancy painter, it doesn’t mean i do not make art. I still do pictures and - if i may be so bold - in a more artistic way than a painter. And please do not come with that new rubbish they call photography.. Now they try to do pictures with the help of some kinds of light machines.. What a waste of time! Anyway, how can i help you, Sir?&quot;//
+[[To be honest; What about a really dirty old plumber?-&gt;Anger Artist]]</tw-passagedata><tw-passagedata pid="108" name="Artist Excuse" tags="" position="1553,1205" size="100,100">&#39;&#39;Needlestich&#39;&#39; //&quot;Just because i do not paint, neigher look like a fancy painter, it doesn’t mean i do not make art. I still do pictures and - if i may be so bold - in a more artistic way than a painter. And please do not try to talk me into that new rubbish they call photography.. Now they try to do pictures with the help of some kinds of light machines.. What a waste of time! Anyway, how can i help you, Sir?&quot;//
 
 [[ Sure.I was assigned by my employer Mrs. Tottenham to hire somebody to make a portrait of her dog, an old and prideful labrador. She fears that he will leave us soon and she wants to have a memory of him lying on her late husband&#39;s former armchair.-&gt;Dog Portrait]]
 
