blocksford rugdealer all
fixed many issues, but not the ones in my mind ;(

--- a/Berners Street .html
+++ b/Berners Street .html
@@ -218,7 +218,7 @@ As you climb up the two rows of stairs up to the office, you notice agitated tal
 &lt;/div&gt;
 
 [[Go Home-&gt;Interlude]]
-</tw-passagedata><tw-passagedata pid="4" name="Blocksford Street" tags="" position="2910,1518" size="100,100">You are on the Blocksfordstreet
+</tw-passagedata><tw-passagedata pid="4" name="Blocksford Street" tags="" position="2915,1521.3333333333335" size="100,100">You are on the Blocksfordstreet
 [[Map]]
 &lt;&lt;if $photographer isnot true&gt;&gt;
 [[Photography Shop]]
@@ -804,9 +804,23 @@ And so, without ever knowing, you prevented the Berners Street Hoax from happeni
 &#39;&#39;The End&#39;&#39;
 [[Back to Start -&gt;Start]] 
 
-</tw-passagedata><tw-passagedata pid="35" name="Continue" tags="" position="3527,929" size="100,100">
+</tw-passagedata><tw-passagedata pid="35" name="Continue" tags="" position="3527,927.3333333333334" size="100,100">
 And so, on the next day, you head over to Hook’s office again, ready to do as he pleased. 
-You will go out into the streets of London, and try to get as many people to visit the Berners Street 54 as you can. The more trouble you stir up, the better, that’s the whole plan. 
+As Hook hands you the satchel &amp; the papers, you realize that something&#39;s off.
+&quot;Mr. Hook, I am sorry, but these papers say that I&#39;m the servant of a...&#39;Mrs. Tottenham&#39;?&quot;
+Hook gives you an almost childish look of secrecy. //&quot;Well boy...maybe, only maybe, I may have forgotten to add a few details. Hah.&quot;//
+&quot;What details, Sir?&quot;
+//&quot;Uhm...well, I maybe I forgot to mention that a certain lady still lives at the Berners Street...specifically, in house number 54.&quot;//
+&quot;Mr. Hook. Are we going to turn an old lady&#39;s life into hell for this bet?&quot;
+Hook&#39;s cheeks started to glow in a feverish red by now. //&quot;I don&#39;t know, will we?&quot;//
+&quot;How is this even legal, sir?&quot;
+//&quot;Well, it is not, I presume. That&#39;s why maybe you should go all out and make sure we win.&quot;//
+You give the old bastard a flustered look. &quot;And what, maybe even lie and use her name to awake the semblance of legitimacy when I ask people to come by? Is that what you want?&quot;
+Most obviously that was exactly what he wanted; his happy expression upon you jokingly proposing that; show his true intentions. But he plays it down; merely saying: &quot;Do what you must, boy. It&#39;s on.&quot;
+
+You sigh; but take the papers and the satchel; and make yourself ready.
+
+You will, finally, go out into the streets of London, and try to get as many people to visit the Berners Street 54 as you can. The more trouble you stir up, the better, that’s the whole plan. Even if &#39;ol Mrs. Tottenham might not like it. 
 You try to keep in mind that getting people that don’t like each other to the Berners Street at the same time, will increase the turmoil even more.
 Hook seems very enthusiastic, as he gives you a satchel of money and a few papers wrapped in an envelope. He quickly explains to you why and how the papers are relevant; and advises you to spend the money wisely.
 With a witty smirk on his face he retreats back into his bureau; and wishes you good luck and success.
@@ -1391,14 +1405,14 @@ He walks away and disappears in the next alley.
 
 [[I’m not gonna tell you more than this: Go to 54 Bernerstreet on [enter Date and time]. He will be there. He always carries a gun and a knife. Be prepared! I have to go now -  my master is waiting...-&gt;DealDetective]]</tw-passagedata><tw-passagedata pid="81" name="DealDetective" tags="" position="4388,1136" size="100,100">//Hmmmm… I don’t know if I can trust you in this matter. I will think about this throughly. If i don’t have any clue until [enter date] , I will maybe show up at 54 Berners street.//
 &lt;&lt;set $detective to true&gt;&gt;
-[[Return to the Street-&gt;Reek Street]] </tw-passagedata><tw-passagedata pid="82" name="With pleasure." tags="" position="2917,1990" size="100,100">&#39;&#39;Victor S. Weapunder&#39;&#39; //&quot;Well, as you can see, there is a wide selection. Do you have any favourites? Colors? Patterns? Size?&quot;//
+[[Return to the Street-&gt;Reek Street]] </tw-passagedata><tw-passagedata pid="82" name="With pleasure." tags="" position="2918.6666666666665,1990" size="100,100">&#39;&#39;Victor S. Weapunder&#39;&#39; //&quot;Well, as you can see, there is a wide selection. Do you have any favourites? Colors? Patterns? Size?&quot;//
 
 [[Hard to say. My employer, Mrs. Tottenham wants to replace all the rugs in her house. The current ones are very old and used. We need different colors and sizes. I think the best way to find out would be if you could visit us.-&gt;Replace Rugs]]
 
 [[I need a really big blue rug with dense pattern. Have you got something like that?-&gt;Big Rug]]
 
 [[Oh I have to leave.-&gt;Blocksford Street]]
-</tw-passagedata><tw-passagedata pid="83" name="Replace Rugs" tags="" position="2640,2004" size="100,100">Sounds like a big job! Well, as i said, i am very busy at the moment. I could visit the Lady at monday, but we have to agree a down payment of 16£.
+</tw-passagedata><tw-passagedata pid="83" name="Replace Rugs" tags="" position="2640,2004" size="100,100">Sounds like a big job! Well, as i said, i am very busy at the moment. I could visit the Lady at monday, but we have to agree to a payment in advance of 16£.
 
 &lt;&lt;if $money lt 16&gt;&gt;
 [[I don&#39;t have enough money... Goodbye Sir-&gt;Blocksford Street]] 
@@ -1407,9 +1421,9 @@ He walks away and disappears in the next alley.
 [[Great, Monday, 11 o&#39;clock, 54 Berners Street. Alright?-&gt;DealRugdealer]]
 [[Hmmm, that seems a little too much for something we do not buy yet. The Lady wouldn’t accept that. You have to reduce the price a little bit.-&gt;Cheaper Price]]
 
-[[Way too much for just an down payment. I’m sorry!-&gt;Even Cheaper]]
+[[Way too much; I can&#39;t give you this much in advance. I’m sorry!-&gt;Even Cheaper]]
 &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
-&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="84" name="DealRugdealer" tags="" position="2257,1895" size="100,100">Good! See you there, Sir!
+&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="84" name="DealRugdealer" tags="" position="2257,1895" size="100,100">//&quot;Good! See you there, Sir!&quot;//
 &lt;&lt;if $rugdealer_pricecheap is 1&gt;&gt;
   &lt;&lt;set $money -=12&gt;&gt;
   &lt;&lt;set $rugdealer to true&gt;&gt;
@@ -1420,14 +1434,14 @@ He walks away and disappears in the next alley.
   &lt;&lt;set $money -=16&gt;&gt;
   &lt;&lt;set $rugdealer to true&gt;&gt;
 &lt;&lt;/if&gt;&gt;
-[[Leave the Shop-&gt;Blocksford Street]] </tw-passagedata><tw-passagedata pid="85" name="Cheaper Price" tags="" position="2301,2083" size="100,100">Well, we don’t want to risk the relationship between you and your employer. How about 12£?
+[[Leave the Shop-&gt;Blocksford Street]] </tw-passagedata><tw-passagedata pid="85" name="Cheaper Price" tags="" position="2302.6666666666665,2081.3333333333335" size="100,100">//&quot;Well, we don’t want to risk the relationship between you and your employer, don&#39;t we? A last proposal: How about 12£?&quot;//
 
 &lt;&lt;link &quot;Great, Monday, 11 o&#39;clock, 54 Berners Street. Alright?&quot;&gt;&gt;
   &lt;&lt;goto &quot;DealRugdealer&quot;&gt;&gt;
   &lt;&lt;set $rugdealer_pricecheap to 1&gt;&gt;
 &lt;&lt;/link&gt;&gt;
 
-[[Still too much. I’m sorry! Have a nice day, Sir!-&gt;Blocksford Street]]</tw-passagedata><tw-passagedata pid="86" name="Even Cheaper" tags="" position="2494,2232" size="100,100">Wait, Sir, we can talk about that! You have to understand that visiting your employers house is much work these days. I can’t afford work for free, neither do you, right? I need a down payment of at least 10£. That’s my last offer!
+[[Still too much. I’m sorry! Have a nice day, Sir!-&gt;Blocksford Street]]</tw-passagedata><tw-passagedata pid="86" name="Even Cheaper" tags="" position="2497.3333333333335,2228.6666666666665" size="100,100">//&quot;Wait, Sir, we can talk about that! You have to understand that visiting your employers house is much work these days. I can’t afford work for free, neither do you, right? I need a down payment of at least 10£. That’s my last offer!&quot;//
 
 &lt;&lt;link &quot;Great, Monday, 11 o&#39;clock, 54 Berners Street. Alright?&quot;&gt;&gt;
   &lt;&lt;goto &quot;DealRugdealer&quot;&gt;&gt;
@@ -1626,28 +1640,28 @@ Listen, i’ll do it for 17£!&quot;//
 
 [[Leave the Shop-&gt;Blocksford Street]] </tw-passagedata><tw-passagedata pid="110" name="Keyword" tags="" position="3049,2197" size="100,100">As you wish, Sir! You’ll find me over here!
 
-You take a look around the crowded shop. There are at least thousands of rugs in this tiny shop. You wonder how this gentleman could transport them all over the sea.
+You take a look around the crowded shop. There must be several thousands of rugs in this tiny shop. You wonder how this gentleman could transport them all over the sea.
 Just as you touch a beautiful small patterned red rug, somebody suddenly tapps on your shoulder. You turn around quickly. There is a small man looking up to you.
 
-Hey, what’s the keyword?
+//&quot;Hey, what’s the keyword?&quot;//
 
-[[Excuse me?-&gt;What Keyword?]]</tw-passagedata><tw-passagedata pid="111" name="What Keyword?" tags="" position="2731,2248" size="100,100">The keyword for.. you know.. C’mon, i bet you’re not here for carpets!
+[[Excuse me?-&gt;What Keyword?]]</tw-passagedata><tw-passagedata pid="111" name="What Keyword?" tags="" position="2731,2248" size="100,100">//&quot;The keyword for.. you know.. C’mon, i bet you’re not here for carpets!&quot;//
 
-The keyword for what?
+&quot;The keyword for what?&quot;
 
-C’mon! You are really here for buying carpets? Well, you just don’t look like someone buying a carpet..
+//&quot;C’mon! You are really here for buying carpets? Well, you just don’t look like someone buying a carpet..&quot;//
 
-I have no idea what you are talking about..
+&quot;I honestly have no idea what you are talking about..&quot;
 
-C’mon, everybody knows that this man does not only making business with carpets! They say, he deals with drugs! Good quality stuff!
+//&quot;C’mon, everybody knows that this man does not only have business with carpets! They say, he deals with drugs! Good quality stuff!&quot;//
 
-Are you sure about that?
+&quot;Are you sure about that?&quot;
 
-Rumors, just rumors! But i believe them! I saw people leaving the store with very heavy rugs! Too heavy! The must be a lot of other stuff rolled in. Anyway.. nevermind..
+//&quot;Rumors, just rumors! But i believe them! I saw people leaving the store with very heavy rugs! Too heavy! The must be a lot of other stuff rolled in. Anyway.. nevermind..&quot;//
 
 He turns around and vanishes into the crowd. You are a little confused, walk around the store and meet again Mr. Weapunder.
 &lt;&lt;set $rugdealer_intel to true&gt;&gt;
-Can i help you now, Sir?
+//&quot;Can i help you now, Sir?&quot;//
 
 [[With pleasure.]]
 
@@ -1714,40 +1728,40 @@ filled with agitation; and an aggressive mood seems to take hold of the people w
 And the droning noise of discussions everywhere, yes, you can feel it. This is absolute chaos!
 </tw-passagedata><tw-passagedata pid="120" name="Tumult Overdone" tags="" position="3990,3520" size="100,100">You start trembling when looking at 
 the street. Violent mayhem. You feel your face paling; and start heavily worrying.
-</tw-passagedata><tw-passagedata pid="121" name="Tumult 0" tags="" position="4111,2733" size="100,100">Most literally, nothing is happening. Like, absolute lull.</tw-passagedata><tw-passagedata pid="122" name="Big Rug" tags="" position="2946,2340" size="100,100">Any kind of blue, any kind of patterns! Best quality, best price! Let me show you!
+</tw-passagedata><tw-passagedata pid="121" name="Tumult 0" tags="" position="4111,2733" size="100,100">Most literally, nothing is happening. Like, absolute lull.</tw-passagedata><tw-passagedata pid="122" name="Big Rug" tags="" position="2951,2338.3333333333335" size="100,100">Any kind of blue, any kind of patterns! Best quality, best price! Let me show you!
 
-He tugs at your sleeve and cuts his way through the crowd to a huge stack of blue rugs. Talking to himself he starts rummage the stack and finally pulls out a couple of big rugs.
+He tugs at your sleeve and cuts his way through the crowd to a huge stack of blue rugs. Talking to himself he starts to rummage through the stack and finally pulls out a couple of big rugs.
 
 Is this what you are looking for, Sir?
 
 [[Yes! That one! That’s it! How much?-&gt;Buy Rug]]
 &lt;&lt;if $rugdealer_intel is true&gt;&gt;
 [[hmmm.. it’s pretty but i need a bigger one. You know.. a heavy one. Really heavy, if you know what i mean..-&gt;Drugs]]
-&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="123" name="Buy Rug" tags="" position="2689,2459" size="100,100">Just 16£ today! Delivery is included, of course!
+&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="123" name="Buy Rug" tags="" position="2689,2459" size="100,100">//&quot;Just 16£ today! Delivery is included, of course!&quot;//
 &lt;&lt;if $money gte 16&gt;&gt;
 [[ Alright. Could you deliver on Monday 11 o&#39;clock at 54 Berners Street? -&gt;DealRugdealer]]
 &lt;&lt;/if&gt;&gt;
 [[What? Were these rugs woven with caviar extract by nude virgins in Walhalla?-&gt;Cheaper Rug]]
-</tw-passagedata><tw-passagedata pid="124" name="Drugs" tags="" position="2944,2499" size="100,100">Eehm.. I think this must be one of the biggest in my selection. Anyway, why should it be heavy?. This makes no sense to me..
+</tw-passagedata><tw-passagedata pid="124" name="Drugs" tags="" position="2944,2499" size="100,100">//&quot;Eehm.. I think this must be one of the biggest in my selection. Anyway, why should it be heavy?. This makes no sense to me..&quot;//
 
-Maybe the carpet is not that important but the weight.
+&quot;Maybe the carpet is not that important but the weight.&quot;
 
-I can’t follow you, Sir..
+//&quot;I can’t follow you, Sir..&quot;//
 
-I just like heavy carpets. I like heavy furniture in general. Heavy furniture with heavy stuff in it, that’s my taste.
+&quot;I just like heavy carpets. I like heavy furniture in general. Heavy furniture with heavy stuff in it, that’s my taste.&quot;
 
-I think i understand.. You really like heavy carpets..
+//&quot;I think i understand.. You really seem to like heavy carpets..&quot;//
 
-I love heavy carpets. Especially when they are rolled up. I’m sure you know what i mean.
+&quot;I adore, I love, I //worship// heavy carpets. Especially when they are rolled up. I’m sure you know what i mean.&quot;
 
 The gentleman comes closer to you and whispers:
 
-I know exactly what you mean, i have tons of new stuff from Casablanca. Superior Quality. 16£, delivering is included. You just have to tell my where and when..
+//&quot;I know exactly what you mean, i have tons of new stuff from Casablanca. Superior Quality. 16£, delivering is included. You just have to tell my where and when..&quot;//
 
 [[Saturday,11 o’clock, Berners Street 54. Bring a really heavy one!-&gt;DealRugdealer]]
 
 
-</tw-passagedata><tw-passagedata pid="125" name="Cheaper Rug" tags="" position="2354,2320" size="100,100">You Sir have no idea of the origin of these high quality rugs! Don’t be ridiculous!
+</tw-passagedata><tw-passagedata pid="125" name="Cheaper Rug" tags="" position="2354,2320" size="100,100">//&quot;You Sir have no idea of the origin of these high quality rugs! Don’t be ridiculous!&quot;//
 
 &lt;&lt;linkappend &quot;I’m sorry, what was the price again?&quot;&gt;&gt;
 12 £, no alternative, no dealing!
